@@ -2,7 +2,7 @@ python-toolbox2 (0.5.0~dev-1) unstable; urgency=low
 
   * New upstream release.
 
- -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Fri, 20 Jan 2012 17:55:08 +0100
+ -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Thu, 02 Feb 2012 11:42:30 +0100
 
 python-toolbox2 (0.4.0-1) unstable; urgency=low
 
