@@ -6,6 +6,7 @@ Version 0.5.0~dev
 	* Remove get_error implementation from all workers which use it.
 	* Add Toolbox2Exception class and make all custom exceptions inherit
 	  from this class.
+	* Add _finalize method to worker API.
 
 Version 0.4.0 Released on 2012/01/16
 
